--- a/src/app/components/grid/grid.component.css
+++ b/src/app/components/grid/grid.component.css
@@ -1,8 +1,10 @@
 .container {
+	margin: 0 auto;
+	max-width: 1200px;	
 	display: grid;
 	grid-template-columns: 1fr 2fr 1fr;
-	grid-template-rows: 1fr 3fr 3fr 3fr 3fr 3fr;
-	grid-gap: 3px 3px;
+	grid-template-rows: 2fr 6fr 6fr 6fr 10fr 8fr;
+	grid-gap: 6px 3px;
 }
 .container div {
 	background-color: #ddd;
