Added model form

--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -33,6 +33,7 @@
 			</form>
 		</div>
 		<div [hidden]="!submitted">Form submitted!</div>
+		<app-model-form></app-model-form>
 	</div>
 	<div>
 		<app-reactive-form></app-reactive-form>
